# mkdocs-demo

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  TODO.md  cspell.config.yaml  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-cd.yml  code-check.yml  dependency.yml
assets/javascripts/: bundle.8fd75fb4.min.js
css/: mkdocstrings.css
features/: index.html
features/auto-documentation/: index.html
features/ci-cd/: index.html
features/make/: index.html
features/packaging/: index.html
features/pre-commit/: index.html
features/unit-testing/: index.html
reference/SUMMARY/: index.html
reference/mkdocs_demo/: index.html
reference/mkdocs_demo/config/: index.html
reference/mkdocs_demo/config/config/: index.html
reference/mkdocs_demo/config/interfaces/: index.html
reference/mkdocs_demo/config/trivial/: index.html
reference/mkdocs_demo/lib/: index.html
reference/mkdocs_demo/lib/factory/: index.html
reference/mkdocs_demo/lib/mkdocstrings/: index.html
reference/mkdocs_demo/lib/superfluous/: index.html
reference/mkdocs_demo/scripts/: index.html
reference/mkdocs_demo/scripts/gen_ref_pages/: index.html
reference/mkdocs_demo/scripts/mkdocs/: index.html
reference/mkdocs_demo/scripts/mypy/: index.html
reference/mkdocs_demo/scripts/precommit/: index.html
search/: search_index.json
src/: mkdocs.yml
src/constants/: __init__.py  dummy.py
src/docs/: index.md
src/docs/reference/: index.md
src/lib/: __init__.py  factory.py  gen_ref_pages.py  mkdocs.py  mkdocstrings.py  precommit.py  test_class.py
src/mkdocs_demo/: __init__.py  mkdocs.yml
src/mkdocs_demo/config/: __init__.py  config.py  interfaces.py  trivial.py
src/mkdocs_demo/constants/: config.py
src/mkdocs_demo/docs/: index.md  layout.md
src/mkdocs_demo/docs/css/: style.css
src/mkdocs_demo/docs/features/: auto-documentation.md  ci-cd.md  index.md  make.md  packaging.md  pre-commit.md  unit-testing.md
src/mkdocs_demo/lib/: factory.py  mkdocstrings.py  superfluous.py  test_class.py
src/mkdocs_demo/scripts/: __init__.py  gen_ref_pages.py  mkdocs.py  mypy.py  precommit.py
src/mkdocs_demo/templates/: .gitkeep
src/mkdocs_testing/: __init__.py  test_class.py
src/scripts/: gen_ref_pages.py  mkdocs.py  precommit.py
tests/lib/: test_factory.py
typings/mkdocs_demo/config/: config.pyi  interfaces.pyi  trivial.pyi
typings/mkdocs_demo/lib/: factory.pyi  mkdocstrings.pyi  superfluous.pyi
typings/mkdocs_demo/scripts/: gen_ref_pages.pyi  mkdocs.pyi  mypy.pyi  precommit.pyi
