[tool.poetry]
authors = ["Laurens van der Tas <laurens.vandertas@gmail.com>"]
description = "Automatic documentation from sources, using MkDocstrings with MkDocs Material."
include = ["src/docs", "src/templates", "src/mkdocs.yml"]
name = "mkdocs-testing"
packages = [
  {include = "mkdocs_testing", from = "src"},
  {include = "lib", from = "src"},
]
readme = "TODO.md"
version = "0.5.0"

[tool.poetry.scripts]
build = "src.scripts.mkdocs:build"
precommit-install = "src.scripts.precommit:install"
precommit-run = "src.scripts.precommit:run"
serve = "src.scripts.mkdocs:serve"

[tool.poetry.dependencies]
install = "^1.3.5"
markdown-exec = {extras = ["ansi"], version = "^1.8.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-material = "^9.5.3"
mkdocs-section-index = "^0.3.8"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
python = "^3.11"
markdown-callouts = "^0.3.0"
mkdocs-minify-plugin = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"
black = "^23.12.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
